remove left & right padding on .media-contact i css to try to resolve horizontal scrolling issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ body {
 }
 
 .media-contact i {
-  padding: 5px 10px 5px 10px;
+  padding: 5px 0px 5px 0px;
   color: whitesmoke;
   font-size: 130%;
   margin: auto;
